--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
-"compilerOptions": {
-"target": "ESNext",
-"useDefineForClassFields": true,
-"lib": ["DOM", "DOM.Iterable", "ESNext"],
-"allowJs": true,
-"skipLibCheck": true,
-"esModuleInterop": false,
-"allowSyntheticDefaultImports": true,
-"strict": true,
-"forceConsistentCasingInFileNames": true,
-"module": "ESNext",
-"moduleResolution": "Node",
-"resolveJsonModule": true,
-"isolatedModules": true,
-"noEmit": true,
-"jsx": "react-jsx"
-},
-"include": ["src"],
-"references": [{ "path": "./tsconfig.node.json" }]
+  "compilerOptions": {
+    "target": "ES2020",   
+    "module": "ESNext",        
+    "lib": [
+      "ES2020",    
+      "DOM"      
+    ],
+    "moduleResolution": "node",
+    "strict": true,
+    "skipLibCheck": true, 
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
