--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2020",   
-    "module": "ESNext",        
+    "target": "ES2020",
+    "module": "ESNext",
     "lib": [
-      "ES2020",    
-      "DOM"      
+      "ES2020",
+      "DOM"
     ],
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "strict": true,
-    "skipLibCheck": true, 
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": [ 
+      "node_modules/@types"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
