--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "node_modules/@types"
     ]
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+"src/global.d.ts"
+],
   "exclude": ["node_modules"]
 }
